GAIM: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.45:
	* New plugin event: event_chat_send_invite
	* Major updates to the perl system (reread PERL-HOWTO and
	  SIGNALS)
	* Major updates to event_chat_* events for plugins (reread
	  SIGNALS)
	* Some GtkIMHtml improvements
	* Various bugfixes

version 0.44 (09/20/2001):
	* More sane scaling of buddy icons (intelligently scale to
	  either 48x48 or 50x50 depending on icon)
	* Have you ever had it happen where you cancel a login and
	  Gaim starts using all the available processing power? I
	  think I fixed that.
	* Temporarily removed Jabber user registration, which wasn't
	  working anyway.
	* Added a spiffy Help button
	* Wrote a plugin for all those people who miss having the
	  chat rooms in their buddy lists (chatlist.so)
	* Updated libfaim
	* Added drop down selection to chat invitation
	* Improved the look of the chat invitation dialog
	* Improved the look of the proxy preferences
	* event_im_recv and event_im_display_rcvd passed whether
	  the message received was auto-response (see SIGNALS)
	* IRC fixes (largly copied from X-Chat)
	* Internal change to how preferences are stored
	* Other bug fixes
	* Option to hide buddy icons

version 0.43 (09/06/2001):
	* Updated German Translation (thanks Daniel Seifert)
	* Can change friendly name in MSN again
	* Bug fixes
	* Auto-reconnect plugin has exponential timeout (i.e. it
	  tries after 8 seconds, then 16, then 32, etc. up to 17
	  minutes)
	* Removed file transfer things from Napster. It didn't work
	  well anyway. It'll be back eventually. (Does anyone even
	  use napster anymore?)

version 0.11.0-pre15 (08/28/2001):
	* MSN works again
	* Fixed a little segfault when images are links
	* Redid the about box again.
	* Fixed a nice little bug with the manual browser command
	* Oscar Unicode fix (Thanks John Matthews)
	* Added Russian Translation
	* Can select which protocols are compiled statically